[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "signalbridge-django-sdk"
version = "1.0.0"
description = "Django SDK for SignalBridge SMS Gateway"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Asaba William", email = "asabawilliam@gmail.com"}
]
keywords = ["django", "sms", "signalbridge", "nugsoft", "messaging", "notifications"]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "Django>=3.2",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/nugsoft/signalbridge-django-sdk"
Documentation = "https://github.com/nugsoft/signalbridge-django-sdk"
Repository = "https://github.com/nugsoft/signalbridge-django-sdk"
